@@ -42,5 +42,6 @@
         <setting id="id-t1" type="text" label="32074" default="5"/> 
         <setting id="id-t2" type="text" label="32075" default="10"/> 
         <setting id="id-t3" type="text" label="32076" default="100"/>  
-                   
+        <setting id="id-delete" type="bool" label="32080" default="true"/>        
+                  
 </settings>
